; ModuleID = '/home/carl/AnghaBench/linux/drivers/iommu/extr_virtio-iommu.c_viommu_set_req_status.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/iommu/extr_virtio-iommu.c_viommu_set_req_status.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.virtio_iommu_req_tail = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i8*, i64, i32)* @viommu_set_req_status to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @viommu_set_req_status(i8* %0, i64 %1, i32 %2) #0 {
  %4 = alloca i8*, align 8
  %5 = alloca i64, align 8
  %6 = alloca i32, align 4
  %7 = alloca %struct.virtio_iommu_req_tail*, align 8
  store i8* %0, i8** %4, align 8
  store i64 %1, i64* %5, align 8
  store i32 %2, i32* %6, align 4
  %8 = load i8*, i8** %4, align 8
  %9 = load i64, i64* %5, align 8
  %10 = getelementptr i8, i8* %8, i64 %9
  %11 = getelementptr i8, i8* %10, i64 -4
  %12 = bitcast i8* %11 to %struct.virtio_iommu_req_tail*
  store %struct.virtio_iommu_req_tail* %12, %struct.virtio_iommu_req_tail** %7, align 8
  %13 = load i32, i32* %6, align 4
  %14 = load %struct.virtio_iommu_req_tail*, %struct.virtio_iommu_req_tail** %7, align 8
  %15 = getelementptr inbounds %struct.virtio_iommu_req_tail, %struct.virtio_iommu_req_tail* %14, i32 0, i32 0
  store i32 %13, i32* %15, align 4
  ret void
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
